# design-patterns

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  biome.jsonc  package.json  pyproject.toml  tsconfig.json
patterns/behavioral/chain_of_responsibility/: README.md  main.py
patterns/behavioral/command/: README.md  index.ts
patterns/behavioral/iterator/: README.md  main.py
patterns/behavioral/mediator/: README.md  main.py
patterns/behavioral/memento/: README.md  main.ipynb  pattern.py  pyproject.toml
patterns/behavioral/observer/: README.md  db.ts  index.ts
patterns/behavioral/state/: README.md  index.ts
patterns/behavioral/strategy/: README.md  index.ts
patterns/behavioral/template_method/: README.md  index.ts
patterns/behavioral/visitor/: .gitignore  README.md  index.ts
patterns/creational/abstract_factory/: README.md  main.py
patterns/creational/builder/: README.md  main.py
patterns/creational/factory_method/: README.md  main.py
patterns/creational/prototype/: README.md  main.dart
patterns/creational/singleton/: README.md  main.py  main_thread_safe.py
patterns/mix/command_decorator_strategy/: README.md  main.py  pyproject.toml
patterns/structural/adapter/: README.md  config.json  config.toml  pubspec.yaml
patterns/structural/adapter/lib/: main.dart
patterns/structural/bridge/: README.md  main.dart
patterns/structural/composite/: README.md  main.py
patterns/structural/decorator/: README.md  index.ts
patterns/structural/facade/: README.md  main.py
patterns/structural/flyweight/: README.md
patterns/structural/flyweight/flyweight_app/: README.md  pubspec.yaml
patterns/structural/flyweight/flyweight_app/lib/: flyweight.dart  main.dart
patterns/structural/proxy/: README.md  main.dart  main.py
